<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_textview">&#8230;</string>
    <string name="default_content_description">Content Description</string>
    <string name="ids_app_name">RISO PRINT-S with RISO Cloud Hub</string>
    <string name="ids_app_launcher_name">RISO PRINT-S with RISO Cloud Hub</string>
    <string name="ids_lbl_save">Save</string>
    <string name="ids_lbl_ok">OK</string>
    <string name="ids_lbl_cancel">Cancel</string>
    <string name="ids_lbl_no_name">No Name</string>
    <string name="ids_lbl_delete">Delete</string>
    <string name="ids_lbl_open_in_ios">Open-in Document Here</string>
    <string name="ids_lbl_open_in_android">Open Document</string>
    <string name="ids_lbl_open_in_winrt">Open Document</string>
    <string name="ids_lbl_home">Home</string>
    <string name="ids_lbl_print_preview">Preview</string>
    <string name="ids_lbl_printers">Printers</string>
    <string name="ids_lbl_print_job_history">Print Job History</string>
    <string name="ids_lbl_settings">Settings</string>
    <string name="ids_lbl_add_printer">Add</string>
    <string name="ids_lbl_search_printers">Search</string>
    <string name="ids_lbl_set_default_printer">Set as Default Printer</string>
    <string name="ids_lbl_delete_all">Delete All</string>
    <string name="ids_lbl_printer_info">Printer Info</string>
    <string name="ids_lbl_printer_name">Printer Name</string>
    <string name="ids_lbl_ip_address">IP Address</string>
    <string name="ids_lbl_mac_address">MAC Address</string>
    <string name="ids_lbl_port">Port</string>
    <string name="ids_lbl_port_raw">Raw</string>
    <string name="ids_lbl_port_lpr">LPR</string>
    <string name="ids_lbl_port_ipps">IPPS</string>
    <string name="ids_lbl_default_print_settings">Default Print Settings</string>
    <string name="ids_lbl_owner_name">Owner</string>
    <string name="ids_lbl_authentication">Authentification</string>
    <string name="ids_lbl_print_settings">Print Settings</string>
    <string name="ids_lbl_page_displayed" formatted="false" tools:ignore="StringFormatInvalid">Page %d / %d</string>
    <string name="ids_lbl_print">Print</string>
    <string name="ids_lbl_printer">Printer</string>
    <string name="ids_lbl_choose_printer">Choose printer</string>
    <string name="ids_lbl_basic">Basic</string>
    <string name="ids_lbl_colormode">Color Mode</string>
    <string name="ids_lbl_colormode_auto">Auto</string>
    <string name="ids_lbl_colormode_fullcolor">Full Color</string>
    <string name="ids_lbl_colormode_black">Black</string>
    <string name="ids_lbl_colormode_2color">Dual Color</string>
    <string name="ids_lbl_orientation">Orientation</string>
    <string name="ids_lbl_orientation_portrait">Portrait</string>
    <string name="ids_lbl_orientation_landscape">Landscape</string>
    <string name="ids_lbl_number_of_copies">Copies</string>
    <string name="ids_lbl_duplex">Duplex print</string>
    <string name="ids_lbl_duplex_long_edge">Long Edge</string>
    <string name="ids_lbl_duplex_short_edge">Short Edge</string>
    <string name="ids_lbl_papersize">Paper Size</string>
    <string name="ids_lbl_papersize_a3">A3</string>
    <string name="ids_lbl_papersize_a3w">A3W</string>
    <string name="ids_lbl_papersize_sra3">SRA3</string>
    <string name="ids_lbl_papersize_a4">A4</string>
    <string name="ids_lbl_papersize_a5">A5</string>
    <string name="ids_lbl_papersize_a6">A6</string>
    <string name="ids_lbl_papersize_b4">B4</string>
    <string name="ids_lbl_papersize_b5">B5</string>
    <string name="ids_lbl_papersize_b6">B6</string>
    <string name="ids_lbl_papersize_foolscap">Foolscap</string>
    <string name="ids_lbl_papersize_tabloid">Tabloid</string>
    <string name="ids_lbl_papersize_legal">Legal 8.5x14</string>
    <string name="ids_lbl_papersize_letter">Letter</string>
    <string name="ids_lbl_papersize_statement">Statement</string>
    <string name="ids_lbl_papersize_legal13">Legal 8.5x13</string>
    <string name="ids_lbl_papersize_8k">8K</string>
    <string name="ids_lbl_papersize_16k">16K</string>
    <string name="ids_lbl_scaletofit">Scale to Fit</string>
    <string name="ids_lbl_papertype">Paper Type</string>
    <string name="ids_lbl_papertype_any">Any</string>
    <string name="ids_lbl_papertype_plain">Plain</string>
    <string name="ids_lbl_papertype_ijpaper">IJ Paper</string>
    <string name="ids_lbl_papertype_mattcoated">Matt Coated</string>
    <string name="ids_lbl_papertype_highquality">High Quality</string>
    <string name="ids_lbl_papertype_cardij">Card-IJ</string>
    <string name="ids_lbl_papertype_lwpaper">LW Paper</string>
    <string name="ids_lbl_inputtray">Input Tray</string>
    <string name="ids_lbl_inputtray_auto">Auto</string>
    <string name="ids_lbl_inputtray_standard">Standard</string>
    <string name="ids_lbl_inputtray_tray1">Tray 1</string>
    <string name="ids_lbl_inputtray_tray2">Tray 2</string>
    <string name="ids_lbl_inputtray_tray3">Tray 3</string>
    <string name="ids_lbl_layout">Layout</string>
    <string name="ids_lbl_imposition">Imposition</string>
    <string name="ids_lbl_imposition_2up">2 pages</string>
    <string name="ids_lbl_imposition_4up">4 pages</string>
    <string name="ids_lbl_imposition_order">Layout order</string>
    <string name="ids_lbl_imposition_order_2up_rl">Right to left (B to T)</string>
    <string name="ids_lbl_imposition_order_2up_lr">Left to right (T to B)</string>
    <string name="ids_lbl_imposition_order_4up_ulb">Left top to bottom</string>
    <string name="ids_lbl_imposition_order_4up_ulr">Left top to right</string>
    <string name="ids_lbl_imposition_order_4up_urb">Right top to bottom</string>
    <string name="ids_lbl_imposition_order_4up_url">Right top to left</string>
    <string name="ids_lbl_finishing">Finishing</string>
    <string name="ids_lbl_sort">Collate</string>
    <string name="ids_lbl_sort_perpage">Group</string>
    <string name="ids_lbl_sort_percopy">Sort</string>
    <string name="ids_lbl_booklet">Booklet</string>
    <string name="ids_lbl_booklet_finishing">Booklet binding</string>
    <string name="ids_lbl_booklet_finishing_fold">Paper folding</string>
    <string name="ids_lbl_booklet_finishing_foldstaple">Fold + Staple</string>
    <string name="ids_lbl_booklet_layout">Imposition direction</string>
    <string name="ids_lbl_booklet_layout_forward">Left to right</string>
    <string name="ids_lbl_booklet_layout_reverse">Right to left</string>
    <string name="ids_lbl_finishingside">Binding side</string>
    <string name="ids_lbl_finishingside_left">Left</string>
    <string name="ids_lbl_finishingside_top">Top</string>
    <string name="ids_lbl_finishingside_right">Right</string>
    <string name="ids_lbl_staple">Staple</string>
    <string name="ids_lbl_staple_upperleft">1 (Upper-left)</string>
    <string name="ids_lbl_staple_upperright">1 (Upper-right)</string>
    <string name="ids_lbl_staple_2">2</string>
    <string name="ids_lbl_staple_1">1</string>
    <string name="ids_lbl_punch">Punch</string>
    <string name="ids_lbl_punch_2holes">2 holes</string>
    <string name="ids_lbl_punch_3holes">3 holes</string>
    <string name="ids_lbl_punch_4holes">4 holes</string>
    <string name="ids_lbl_outputtray">Output Tray</string>
    <string name="ids_lbl_outputtray_auto">Auto</string>
    <string name="ids_lbl_outputtray_facedown">Face down tray</string>
    <string name="ids_lbl_outputtray_top">Top</string>
    <string name="ids_lbl_outputtray_stacking">Stacking</string>
    <string name="ids_lbl_secure_print">Secure Print</string>
    <string name="ids_lbl_pin_code">PIN Code</string>
    <string name="ids_lbl_off">Off</string>
    <string name="ids_lbl_on">On</string>
    <string name="ids_lbl_help">Help</string>
    <string name="ids_lbl_legal">Legal</string>
    <string name="ids_lbl_printers_empty">No Printers</string>
    <string name="ids_lbl_printjobhistory_empty">No Print Job History</string>
    <string name="ids_lbl_printer_search_empty">No Printers Found</string>
    <string name="ids_info_msg_printer_add_successful">Added Successfully</string>
    <string name="ids_info_msg_warning_cannot_find_printer">Warning, Cannot find Printer.</string>
    <string name="ids_info_msg_printing" tools:ignore="TypographyEllipsis">Printing...</string>
    <string name="ids_info_msg_wakeonlan">Waking up from sleep</string>
    <string name="ids_info_msg_delete_jobs_title">Delete Print Job History</string>
    <string name="ids_info_msg_delete_jobs">Are you sure you want to delete?</string>
    <string name="ids_info_msg_print_job_successful">Successful.</string>
    <string name="ids_info_msg_print_job_failed">Failed.</string>
    <string name="ids_err_msg_cannot_add_printer">Printer already exists in saved printers list.</string>
    <string name="ids_err_msg_invalid_ip_address">Please enter a valid IP Address.</string>
    <string name="ids_err_msg_max_printer_count">Saved Printer reached maximum count.</string>
    <string name="ids_err_msg_no_selected_printer">Please register a printer.</string>
    <string name="ids_err_msg_pdf_wrong_password">Please check the password you entered.</string>
    <string name="ids_err_msg_open_failed">The file could not be opened. Select a valid file and make sure the file is accessible or that there is enough free space on your device.</string>
    <string name="ids_err_msg_pdf_encrypted">PDF Encryption is not supported.</string>
    <string name="ids_err_msg_pdf_printing_not_allowed">File does not allow printing.</string>
    <string name="ids_err_msg_file_too_large">File size is too large.</string>
    <string name="ids_err_msg_not_enough_space">Not enough free space on device.</string>
    <string name="ids_err_msg_network_error">No network available.</string>
    <string name="ids_err_msg_db_failure">Database failure. Please restart the application. If the problem persists, please reinstall the application.</string>
    <string name="ids_lbl_yes">Yes</string>
    <string name="ids_lbl_no">No</string>
    <string name="ids_lbl_license">End User License Agreement</string>
    <string name="ids_lbl_papertype_roughpaper">Rough Paper</string>
    <string name="ids_lbl_agree">Agree</string>
    <string name="ids_lbl_disagree">Disagree</string>
    <string name="ids_err_msg_disagree_to_license">User must agree to License Agreement to continue using the app</string>
    <string name="ids_err_msg_storage_permission_not_allowed">Access to storage is needed to open.\n\nIn the next dialog that will appear, please tap the \"Allow/OK\" button.</string>
    <string name="ids_lbl_permission_information">%1$s lets you open a PDF/ Image/ Text file for printing using the Open-In feature.\nIn order to open a file, access to the storage of the device is needed.\n\nYou can enable the storage permission when prompted in the Home screen or in the Permission Settings screen via [Settings] -> [Apps] -> [%1$s] -> [Permissions].</string>
    <string name="ids_lbl_start">Start</string>
    <string name="ids_lbl_search_printers_settings">Search Settings</string>
    <string name="ids_lbl_snmp_community_name">SNMP Community Name</string>
    <string name="ids_lbl_valid_community_name" tools:ignore="TypographyDashes">Valid characters are:\na-zA-Z0-9,./:;@[\\¥]^_</string>
    <string name="ids_err_msg_invalid_community_name">Please enter a SNMP community name with valid characters</string>
    <string name="ids_lbl_papertype_plain_premium">Plain (premium)</string>
    <string name="ids_lbl_inputtray_external">Additional Tray</string>
    <string name="ids_lbl_content_print_login_notification">Please login to access content list</string>
    <string name="ids_lbl_content_print_files_empty_notification">Tap refresh button to retrieve latest files from cloud</string>
    <string name="ids_lbl_previous">Previous</string>
    <string name="ids_lbl_next">Next</string>
</resources>