<?xml version="1.0" encoding="utf-8"?>
<jp.co.riso.smartdeviceapp.view.widget.SDALinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_light_3"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_sub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/printers_row_height"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:layout_marginRight="@dimen/printers_sub_separator_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:text="@string/ids_lbl_printer_name"
            android:textColor="@color/theme_dark_1" />

        <Space
            android:layout_width="@dimen/printers_name_space"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <TextView
            style="@style/EllipsizeText"
            android:id="@+id/inputPrinterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/theme_light_1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:background="@color/theme_light_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/printers_row_height"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:layout_marginRight="@dimen/printers_sub_separator_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ids_lbl_ip_address"
            android:textColor="@color/theme_dark_1" />

        <TextView
            style="@style/EllipsizeText"
            android:id="@+id/infoIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textColor="@color/theme_light_1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:background="@color/theme_light_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/printers_row_height"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:layout_marginRight="@dimen/printers_sub_separator_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ids_lbl_mac_address"
            android:textColor="@color/theme_dark_1" />

        <TextView
            style="@style/EllipsizeText"
            android:id="@+id/infoMacAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textColor="@color/theme_light_1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:background="@color/theme_light_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/printers_row_height"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:layout_marginRight="@dimen/printers_sub_separator_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_weight="1"
            android:text="@string/ids_lbl_port"
            android:textColor="@color/theme_dark_1" />

        <Spinner
            android:id="@+id/inputPort"
            android:layout_width="@dimen/printers_port_spinner_size"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="@drawable/widgettheme_spinner_background_holo_dark_1"
            android:gravity="right|center_vertical" />

       <TextView
           android:id="@+id/defaultPort"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical|right"
           android:layout_weight="1"
           android:gravity="center_vertical|right"
           android:text="@string/ids_lbl_port_lpr"
           android:textColor="@color/theme_light_1"
           android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:background="@color/theme_light_1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/printers_row_height"
        android:layout_marginLeft="@dimen/printers_sub_separator_padding"
        android:layout_marginRight="@dimen/printers_sub_separator_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/ids_lbl_set_default_printer"
            android:textColor="@color/theme_dark_1" />

        <Spinner
            android:id="@+id/defaultPrinter"
            android:layout_width="@dimen/printers_port_spinner_size"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="@drawable/widgettheme_spinner_background_holo_dark_1"
            android:gravity="right|center_vertical" />

    </LinearLayout>

</jp.co.riso.smartdeviceapp.view.widget.SDALinearLayout>